@@ -1,1 +1,1 @@
-java -classpath "lib/antlr.jar;lib/concurrent.jar;lib/icu4j.jar;lib/jakarta-oro-2.0.5.jar;lib/jena.jar;lib/jenatest.jar;lib/junit.jar;lib/log4j-1.2.7.jar;lib/commons-logging-api.jar;lib/commons-logging.jar;lib/xercesImpl.jar;lib/xml-apis.jar" junit.textui.TestRunner com.hp.hpl.jena.test.TestPackage
+java -classpath "lib/antlr-2.7.5.jar;lib/concurrent.jar;lib/icu4j.jar;lib/jakarta-oro-2.0.8.jar;lib/jena.jar;lib/jenatest.jar;lib/junit.jar;lib/log4j-1.2.12.jar;lib/commons-logging-api.jar;lib/commons-logging.jar;lib/xercesImpl.jar;lib/xml-apis.jar" junit.textui.TestRunner com.hp.hpl.jena.test.TestPackage
