@@ -5,15 +5,15 @@ S=":"
 if [ "$OSTYPE" == "cygwin" ]; then S=";"; fi
 
 LIBS="$(cat<<EOF
-antlr.jar
+antlr-2.7.5.jar
 commons-logging.jar
 concurrent.jar
 icu4j.jar
-jakarta-oro-2.0.5.jar
+jakarta-oro-2.0.8.jar
 jena.jar
 jenatest.jar
 junit.jar
-log4j-1.2.7.jar
+log4j-1.2.12.jar
 xercesImpl.jar
 xml-apis.jar
 EOF
